@@ -38,6 +38,9 @@
 <p>2022-09-24  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>configure.ac: Search for a usable Python program, and then use
+it to execute Python scripts. This avoids depending on a default
+name.</li>
 <li>magick/common.h (MAGICK_FUNC_MALLOC_2ARG): Add macros to support
 GCC malloc attributes which accept arguments.</li>
 </ul>
